@@ -1,3 +1,7 @@
+2012-01-18 Wed  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage-batch-devel-compose-package-dir): Disable VC.
+
 2012-01-14 Sat  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el (epackage-with-insert-file-contents-literally): New.
